--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <script>
+      let userScore = 0;
+      let computerScore = 0;
+      let round = 0;
+
       //the computer need to random select rock paper or scissor
       let options = ["rock", "paper", "scissors"];
-
-      const computerSelection =
+      let computerSelection =
         options[Math.floor(Math.random() * options.length)];
 
       //the player must input rock paper or scissor
@@ -20,6 +23,7 @@
       function playRound(userSelection, computerSelection) {
         if (userSelection === computerSelection) {
           return "tie";
+          round++;
         }
         if (
           (userSelection == "rock" && computerSelection == "scissors") ||
@@ -28,6 +32,7 @@
         ) {
           userScore++;
           return "player wins";
+          round++;
         }
         if (
           (computerSelection == "rock" && userSelection == "scissors") ||
@@ -36,34 +41,23 @@
         ) {
           computerScore++;
           return "computer wins";
+          round++;
         }
       }
-
-      let userScore = 0;
-      let computerScore = 0;
-      let totalScore = userScore + computerScore;
-
-      console.log(
-        playRound(userSelection, computerSelection) +
-          " score: " +
-          "user:" +
-          userScore +
-          " " +
-          "computer:" +
-          computerScore
-      );
       function game() {
-        playRound(userSelection, computerSelection);
-        for (let totalScore = 0; totalScore <= 5; totalScore++) {
-          if (userScore == 5) {
-            console.log("player wins");
-          } else if (computerScore == 5) {
-            console.log("computer wins");
-          } else {
-            break;
-          }
+        for (round = 1; round < 6; round++) {
+          playRound(
+            (userSelection = prompt("choose between Rock, Paper or Scissors")),
+            (computerSelection =
+              options[Math.floor(Math.random() * options.length)])
+          );
+
+          console.log(
+            " score: " + "user:" + userScore + " " + "computer:" + computerScore
+          );
         }
       }
+      game();
       //ENDS when either has 5 points
     </script>
   </body>
